platform_versioned_docs/version-23.2.0/enterprise/_templates/k8s/dbconsole.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbconsole
  labels:
    app: dbconsole
spec:
  selector:
    matchLabels:
      app: dbconsole
  template:
    metadata:
      labels:
        app: dbconsole
    spec:
      containers:
        - image: adminer:4.7.7
          name: dbconsole
          ports:
            - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: dbconsole
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: dbconsole
