platform_versioned_docs/version-23.2.0/enterprise/_templates/k8s/ingress.gke.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: YOUR-TOWER-HOST-NAME
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
